[package]
name = "aivory-monitor"
version = "1.0.1"
edition = "2021"
authors = ["ILSCIPIO GmbH <info@ilscipio.com>"]
description = "AIVory Monitor Rust Agent - Remote debugging with AI-powered fix generation"
license = "MIT"
repository = "https://github.com/aivorynet/agent-rust"
homepage = "https://aivory.net/monitor/"
documentation = "https://github.com/aivorynet/agent-rust#readme"

[dependencies]
backtrace = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
uuid = { version = "1.6", features = ["v4"] }
hostname = "0.3"
once_cell = "1.19"
parking_lot = "0.12"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
